@@ -25,6 +25,9 @@ colour 13 white brown
 colour 14 black cyan
 colour 15 yellow red
 
+# Default background colour is black (0).
+# Greyscale goes from 232 (dark grey) to 255 (white).
+# colour.background 250
 
 # When the cursor is view.margin.y lines or less from the top or
 # bottom line, repeatedly scroll the screen view.jump.y lines until
