@@ -366,7 +366,7 @@ module Diakonos
         when /^lang\.(.+?)\.indent\.size$/, /^lang\.(.+?)\.(?:tabsize|wrap_margin)$/,
             "context.max_levels", "context.max_segment_width", "max_clips", "max_undo_lines",
             "view.margin.x", "view.margin.y", "view.scroll_amount", "view.lookback", 'grep.context',
-            'view.line_numbers.width', 'fuzzy_file_find.max_files'
+            'view.line_numbers.width', 'fuzzy_file_find.max_files', 'colour.background'
           @settings[ command ] = arg.to_i
         when "view.jump.x", "view.jump.y"
           @settings[ command ] = [ arg.to_i, 1 ].max
